--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -2,11 +2,15 @@
 name = "conveyor"
 version = "0.1.0"
 authors = ["kmacgugan <kmacgugan@chef.io>"]
+build = "build.rs"
+
+[build-dependencies]
+serde_codegen = "0.8"
 
 [dependencies]
 serde = "*"
 serde_json = "*"
-serde_derive = "*"
+serde_codegen = "*"
 uuid = { version = "*", features = ["serde", "v4"] }
 amqp = "*"
 env_logger = "*"
